Add Separate Mag, PB

--- a/OverParse/Detalis.xaml
+++ b/OverParse/Detalis.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OverParse"
         mc:Ignorable="d"
+        WindowStartupLocation="CenterOwner"
         Title="Detalis" Height="300" Width="300">
     <Grid>
         <Label Content="testing..." Height="30" HorizontalAlignment="Stretch" VerticalAlignment="Top" />
